<resources>
    <string name="app_name">tartineo</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="error_empty_field">Please fill in the required fields.</string>
    <string name="error_different_passwords">Please specify identical passwords.</string>
    <string name="error_password_length">Password must be at least 6 characters.</string>
    <string name="error_registration_failed">Registration failed! Please try again later.</string>
    <string name="info_registration_successful">Registration successful. An email has been set to your email address. Please verify your account.</string>
    <string name="info_register_button_fired">Register button fired.</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="app_description">Locate your bros or enemies.</string>
    <string name="register_now"><u>First time here ? Register now.</u></string>
    <string name="info_register_initialization">RegisterActivity initialization.</string>
    <string name="info_login_initialization">LoginActivity initialization.</string>
    <string name="info_user_already_logged_in">User already logged in.</string>
    <string name="error_empty_email">Please fill in your email address.</string>
    <string name="error_empty_password">Please fill in your password.</string>
    <string name="info_login_successful">Login successful.</string>
    <string name="error_login_failed">Login failed! Please try again later.</string>
    <string name="info_username_storage">The username has been saved.</string>
    <string name="error_username_storage">An error occurred during the username storage.</string>
    <string name="logout">Logout</string>
    <string name="info_logout_successful">Logout successful.</string>
    <string name="info_map_initialization">MapFragment initialization.</string>
    <string name="map">Map</string>
    <string name="friends">Friends</string>
    <string name="enemies">Enemies</string>
    <string name="settings">Settings</string>
    <string name="info_main_initialization">MainActivity initialization.</string>
    <string name="info_enemies_initialization">EnemiesFragment initialization.</string>
    <string name="info_friends_initialization">FriendsFragment initialization.</string>
    <string name="info_settings_initialization">SettingsFragment initialization.</string>
    <string name="error_user_not_logged_in">User not logged in.</string>
    <string name="add">Add</string>
    <string name="add_new_friend">" Add a new friend!"</string>
    <string name="info_add_friend_button_fired">Add friend button fired.</string>
    <string name="info_friend_storage">This friend has been added successfully.</string>
    <string name="error_friend_storage">An error occurred  during the friend storage.</string>
    <string name="info_user_relations_storage">The user relations has been saved.</string>
    <string name="error_user_relations_storage">An error occurred during the user relations storage.</string>
    <string name="error_friend_search_failed">" The friend search failed! This username does not exist."</string>
    <string name="info_friend_search_successful">Friend search successful.</string>
    <string name="info_user_not_found">User not found.</string>
    <string name="error_users_already_friend">These users are already friends.</string>
    <string name="info_get_friend_list">Friend list successfully loaded.</string>
    <string name="error_add_yourself_as_friend">You cannot add yourself as friend.</string>
    <string name="error_has_occurred">An error has occurred.</string>
    <string name="delete">Delete</string>
    <string name="info_friend_removal">This friend has been removed successfully.</string>
    <string name="error_friend_removal">An error occurred  during the friend removal.</string>
    <string name="friend_list">"Friends list "</string>
    <string name="info_current_location">Current location :</string>
    <string name="error_location_not_found">Location not found.</string>
    <string name="info_location_storage">The location has been saved.</string>
    <string name="error_location_storage">An error occurred during the location storage.</string>
    <string name="info_location_updated">Location has been updated.</string>
    <string name="self_marker_helper">(you)</string>
    <string name="error_document_event_listening">An error occurred during document\'s events listening.</string>
    <string name="info_get_enemy_list">Enemy list successfully loaded.</string>
    <string name="info_relation_marker_removal">A relation marker has been removed.</string>
    <string name="info_relation_marker_updated">A relation marker has been updated.</string>
    <string name="info_relation_marker_added">A relation marker has been added.</string>
    <string name="error_display_yourself_as_friend_marker">You cannot display yourself as friend marker.</string>
    <string name="enemies_list">Enemies list</string>
    <string name="add_enemy">Add an enemy!</string>
    <string name="info_add_enemy_button_fired">Add enemy button fired.</string>
    <string name="info_enemy_search_successful">Enemy search successful.</string>
    <string name="error_add_yourself_as_enemy">You cannot add yourself as enemy.</string>
    <string name="error_users_already_enemy">These users are already enemies.</string>
    <string name="error_enemy_search_failed">The enemy search failed! This username does not exist.</string>
    <string name="info_enemy_storage">This enemy has been added successfully.</string>
    <string name="info_enemy_removal">This enemy has been removed successfully.</string>
    <string name="error_enemy_removal">An error occured  during the enemy removal.</string>
    <string name="error_enemy_storage">An error occured  during the enemy storage.</string>
    <string name="error_user_remove_relations">An error occurred while deleting the relationship between two users.</string>
    <string name="logged_in">Logged in as <b>%1$s</b>.</string>
    <string name="radius">Radius</string>
    <string name="radius_settings">Enter the display radius of your relation on the map (in km) :</string>
    <string name="save_settings">Save settings</string>
    <string name="info_settings_updated">Settings successfully updated.</string>
    <string name="error_settings_loading">An error occurred during the settings loading.</string>
    <string name="info_settings_loaded">Current user settings successfully loaded.</string>
    <string name="error_settings_storage">An error occurred during the settings storage.</string>
    <string name="info_user_settings_storage">The user settings has been saved.</string>
    <string name="error_user_settings_storage">An error occurred during the user settings storage.</string>
    <string name="radius_value">%1$d/%2$d</string>
    <string name="info_username_displayed">Current username displayed.</string>
    <string name="markers_channel_name">Markers notification channel</string>
    <string name="markers_channel_description">This is the notification channel for markers.</string>
    <string name="notification_title_friend_is_close_to_you">A friend is close to you !</string>
    <string name="notification_title_enemy_is_close_to_you">An enemy is close to you !</string>
    <string name="notification_description_friend_is_close_to_you">%1$s is at %2$s km of you... let\'s meet up !</string>
    <string name="notification_description_enemy_is_close_to_you">%1$s is at %2$s km of you... go away !</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_settings">Insert your phone number :</string>
    <string name="contact_user">Contact %1$s</string>
    <string name="call">Call</string>
    <string name="send_sms">Send SMS</string>
    <string name="contact_friend_dialog_description">Click on one of the two buttons below to contact your friend.</string>
</resources>
