<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings"
        android:layout_marginTop="15dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/welcome_user_text"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/radius_settings"/>

        <EditText
            android:id="@+id/friends_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/radius"
            android:inputType="textPersonName" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <Button
            android:id="@+id/save_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_settings"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white"
            android:onClick="logout"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            />

        <Button
            android:id="@+id/map_logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:onClick="logout"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>
</LinearLayout>
